# WatchDog

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
deploy/: README.md  render.yaml
examples/: deploy.sh
src/: alert.rs  app.rs  benchmark.rs  buffer.rs  cli.rs  config.rs  dashboard.rs  detector.rs  engine.rs  export.rs  llm.rs  logs.rs  main.rs  model.rs  storage.rs  tail.rs
vercel-demo/: index.html
vercel-demo/api/: healthz.js  incidents.js
vercel-demo/api/_lib/: watchdog.js
vercel-demo/api/demo/: scenarios.js
vercel-demo/api/deployments/: start.js
vercel-demo/api/incidents/: [id].js
vercel-demo/api/incidents/[id]/: agent.js  explain.js  notes.js  status.js
